--- a/finally.ipynb
+++ b/finally.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN05l/yTxArICEE34ZBwPb0",
+      "authorship_tag": "ABX9TyPXTBkYN9DvSWAr9qbomjzj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PT6EGXNI7zG1",
-        "outputId": "fc3096fa-ed92-4669-f46a-454873877ac1"
+        "outputId": "f3968342-b3c6-4a0b-b2d9-5a0f141621c6"
       },
       "outputs": [
         {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "oznmA6MD8wJ3"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -94,12 +94,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 328
+          "height": 206
         },
         "id": "Y9B09Sc89-_F",
-        "outputId": "2edbeeb0-de6a-415b-e04f-cb6cd73c0a89"
+        "outputId": "4aa49965-a4dc-45b4-a142-a6045e6cce6a"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,21 +107,21 @@
             "text/plain": [
               "                userName                                            content  \\\n",
               "0           Neeraj Kumar  The app has been disappointing in terms of its...   \n",
-              "1  sai santosh kottakota  I cannot open \"To mobile number\" section since...   \n",
-              "2              Md Junaid  The UI is smooth and also works with weak data...   \n",
-              "3   battina gundal reddy  The worst service ever. The app is not working...   \n",
-              "4             Ajay Kumar  Hey, your app is having a bug. Once I recharge...   \n",
+              "1                Sagar S  It's one of the best payment apps in India! Th...   \n",
+              "2          Maimona Begum  The UI is smooth and also works with weak data...   \n",
+              "3      VaiBhaV R. BhaGaT  I'm a visually impaired user who uses PhonePe ...   \n",
+              "4  sai santosh kottakota  I cannot open \"To mobile number\" section since...   \n",
               "\n",
               "   score  \n",
               "0      3  \n",
-              "1      1  \n",
+              "1      4  \n",
               "2      4  \n",
-              "3      1  \n",
+              "3      3  \n",
               "4      1  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cb10bce9-9d9e-473b-ac66-40b99791dddb\">\n",
+              "  <div id=\"df-ca809016-fa31-4a74-8a0d-b4aa1d51bfd8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -155,32 +155,32 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>sai santosh kottakota</td>\n",
-              "      <td>I cannot open \"To mobile number\" section since...</td>\n",
-              "      <td>1</td>\n",
+              "      <td>Sagar S</td>\n",
+              "      <td>It's one of the best payment apps in India! Th...</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Md Junaid</td>\n",
+              "      <td>Maimona Begum</td>\n",
               "      <td>The UI is smooth and also works with weak data...</td>\n",
               "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>battina gundal reddy</td>\n",
-              "      <td>The worst service ever. The app is not working...</td>\n",
-              "      <td>1</td>\n",
+              "      <td>VaiBhaV R. BhaGaT</td>\n",
+              "      <td>I'm a visually impaired user who uses PhonePe ...</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>Ajay Kumar</td>\n",
-              "      <td>Hey, your app is having a bug. Once I recharge...</td>\n",
+              "      <td>sai santosh kottakota</td>\n",
+              "      <td>I cannot open \"To mobile number\" section since...</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cb10bce9-9d9e-473b-ac66-40b99791dddb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ca809016-fa31-4a74-8a0d-b4aa1d51bfd8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -231,12 +231,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-cb10bce9-9d9e-473b-ac66-40b99791dddb button.colab-df-convert');\n",
+              "          document.querySelector('#df-ca809016-fa31-4a74-8a0d-b4aa1d51bfd8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-cb10bce9-9d9e-473b-ac66-40b99791dddb');\n",
+              "          const element = document.querySelector('#df-ca809016-fa31-4a74-8a0d-b4aa1d51bfd8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -259,9 +259,21 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with pd.ExcelWriter('phonepe_reviews.xlsx') as writer:\n",
+        "    scrapeddata.to_excel(writer)"
+      ],
+      "metadata": {
+        "id": "dajExQUksYaN"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
